src/test/deca/context/invalid/BadExtendsInt.deca
class A extends int{
    int x;
    x= 2020;
}